--- a/Google Link Direct Download Link Generator.html
+++ b/Google Link Direct Download Link Generator.html
@@ -6,36 +6,68 @@
     <title>Drive Link > One Click</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             text-align: center;
             margin: 20px;
+            background-color: #f4f4f4;
+        }
+
+        h1 {
+            color: #333;
         }
 
         #inputLink, #outputLink {
             width: 80%;
-            padding: 8px;
-            margin-bottom: 10px;
+            padding: 10px;
+            margin: 10px auto;
+            box-sizing: border-box;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            background-color: #fff;
+            color: #333;
         }
 
         #convertButton, #copyButton {
             padding: 10px;
             cursor: pointer;
+            background-color: #4caf50;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            margin: 10px;
+        }
+
+        #convertButton:hover, #copyButton:hover {
+            background-color: #45a049;
+        }
+
+        #outputLink {
+            font-weight: bold;
+            color: #333;
+        }
+
+        #copyButton:disabled {
+            background-color: #ddd;
+            color: #666;
+            cursor: not-allowed;
         }
     </style>
 </head>
 <body>
-    <h1>Drive Link > One Click</h1>
+    <h1>Drive Link Converter</h1>
     
     <label for="inputLink">Enter Link:</label>
     <input type="text" id="inputLink" placeholder="Enter your Google Drive link">
 
     <button id="convertButton" onclick="convertLink()">Convert</button>
-   <div style="display:flex; justify-content:center;"> 
-<strong>
-    <p id="outputLink"></p>
-</strong>
-</div>
-<button id="copyButton" onclick="copyToClipboard()">Copy Convered Link</button>
+
+    <div style="display:flex; justify-content:center;">
+        <strong>
+            <p id="outputLink"></p>
+        </strong>
+    </div>
+
+    <button id="copyButton" onclick="copyToClipboard()" disabled>Copy Converted Link</button>
 
     <script>
         function convertLink() {
@@ -44,7 +76,7 @@
 
             if (fileId) {
                 var outputLink = 'https://drive.google.com/uc?export=download&id=' + fileId;
-                document.getElementById('outputLink').innerText = 'Converted Link: ' + outputLink;
+                document.getElementById('outputLink').innerText =  outputLink;
                 document.getElementById('copyButton').disabled = false; // Enable the copy button
             } else {
                 document.getElementById('outputLink').innerText = 'Invalid Google Drive link';
